fixing issue with menu on mobile (3)

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -89,16 +89,15 @@ body {
   }
 
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover,
-  .dropdown-content a:focus {background-color: #A9A9A9}
+  .dropdown-content a:hover {background-color: #A9A9A9}
 
   /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content,
-  .dropdown:focus .dropdown-content {
+  .dropdown:hover .dropdown-content {
       display: block ;
       position: absolute;
       line-height: 1.15;
-      *{width: 100%;} 
+      *{width: 100%;}; 
+      z-index: 3;
   }
 
   /* Change the background color of the dropdown button when the dropdown content is shown */
@@ -631,3 +630,46 @@ icon {
     border-radius: 50%;
 }
 
+
+@media only screen and ( max-width: 40em ) /* 640 */
+{
+    #nav
+    {
+        position: relative;
+    }
+        #nav > a
+        {
+        }
+        #nav:not( :target ) > a:first-of-type,
+        #nav:target > a:last-of-type
+        {
+            display: block;
+        }
+ 
+    /* first level */
+ 
+    #nav > ul
+    {
+        height: auto;
+        display: none;
+        position: absolute;
+        left: 0;
+        right: 0;
+    }
+        #nav:target > ul
+        {
+            display: block;
+        }
+        #nav > ul > li
+        {
+            width: 100%;
+            float: none;
+        }
+ 
+    /* second level */
+ 
+    #nav li ul
+    {
+        position: static;
+    }
+}
